[tool.poetry]
name = "messagebrokers-tumeke"
version = "0.0.1"
description = "Kafka and RabbitMQ classes"
authors = ["Sergei Kazakov <kazakov.s.fl@gmail.com>"]
readme = "README.md"
license = "GPLv3+"
keywords=["rabbitmq", "asyncio", "aio_pika", "kafka", "aiokafka"]
homepage = "https://github.com/tumeke-tech/messagebrokers-tumeke"
classifiers=[
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
aiokafka = "0.7.0"
aio-pika = "9.3.1"
yarl = [{ version = '*'}]
typing_extensions = [{ version = '*', python = "< 3.8" }]
# for pkg_resources
setuptools = [{ version = '*', python = "< 3.8" }]

[tool.poetry.group.dev.dependencies]
aiokafka = "0.7.0"
aio-pika = "9.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
